--- a/index.html
+++ b/index.html
@@ -26,18 +26,10 @@
                     <li class="active"><a data-toggle="tab" href="#home">Followers</a></li>
                     <li><a data-toggle="tab" href="#menu1">Following</a></li>
                 </ul>
-
-                <div class="tab-content">
-                    <div id="home" class="tab-pane fade in active">
-                        <h3>Followers</h3>
-                        <p>Some content.</p>
-                    </div>
-                    <div id="menu1" class="tab-pane fade">
-                        <h3>Following</h3>
-                        <p>Some content in menu 1.</p>
-                    </div>
+                <div class="followers-container">
 
                 </div>
+
             </div>
         </div>
     </div>
