--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -26,7 +25,13 @@
                     <li class="active"><a data-toggle="tab" href="#home">Followers</a></li>
                     <li><a data-toggle="tab" href="#menu1">Following</a></li>
                 </ul>
-                <div class="followers-container">
+                <div class="tab-content">
+                    <div id="home" class="tab-pane fade in active">
+                        <div class="followers-container"></div>
+                    </div>
+                    <div id="menu1" class="tab-pane fade">
+                        <div class="following-container"></div>
+                    </div>
 
                 </div>
 
