--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="col-sm-6">
                 <ul class="nav nav-tabs">
                     <li class="active"><a data-toggle="tab" href="#home">Followers</a></li>
-                    <li><a data-toggle="tab" href="#menu1">Following</a></li>
+                    <li><a data-toggle="tab" href="#menu1" onclick="getFollowing()">Following</a></li>
                 </ul>
                 <div class="tab-content">
                     <div id="home" class="tab-pane fade in active">
