--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
+
                 <div class="listcontainer">
 
                 </div>
             </div>
             <div class="col-sm-6">
-                <ul class="nav nav-tabs">
-                    <li class="active"><a data-toggle="tab" href="#home">Followers</a></li>
+                <ul class="nav nav-tabs" id="sampleTabs">
+                    <li class="active"><a data-toggle="tab" href="#home" onclick="getFollowers()">Followers</a>
+                    </li>
                     <li><a data-toggle="tab" href="#menu1" onclick="getFollowing()">Following</a></li>
                 </ul>
                 <div class="tab-content">
