--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 </head>
 
 <body>
+    <div class="header">
+        <img src="Logo.png" alt="" /> <span class="header-data">GitHub</span>
+    </div>
+    <div class="hr-div">
+        <hr class="header-hr" />
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
@@ -22,7 +28,7 @@
                 </div>
             </div>
             <div class="col-sm-6">
-                <ul class="nav nav-tabs" id="sampleTabs">
+                <ul class="nav nav-tabs ul-list" id="sampleTabs">
                     <li class="active"><a data-toggle="tab" href="#home" onclick="getFollowers()">Followers</a>
                     </li>
                     <li><a data-toggle="tab" href="#menu1" onclick="getFollowing()">Following</a></li>
